# OBS-VirtualCam-sender

./: README.md  video_generator.h
MacOS/: CMakeLists.txt  Server.h  Server.m  main.m
MacOS/Virtual-camera-sender/: main.m
MacOS/Virtual-camera-sender.xcodeproj/xcuserdata/vislaniap.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MacOS/Virtual-camera-sender.xcodeproj/xcuserdata/vislaniap.xcuserdatad/xcschemes/: xcschememanagement.plist
MacOS/libs/Peertalk.framework/Versions/A/: Peertalk
MacOS/libs/Peertalk.framework/Versions/A/Modules/: module.modulemap
MacOS/libs/Peertalk.framework/Versions/A/Resources/: Info.plist
MacOS/libs/Peertalk.framework/Versions/A/_CodeSignature/: CodeResources
Virtual-camera-sender/: Capture.h  Capture.m  Info.plist  Server.m  main.m  video_generator.c
Virtual-camera-sender.xcodeproj/: project.pbxproj
Windows/: CMakeLists.txt  main.cpp
Windows/queue/: share_queue.h
